Description of the work done

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Мій вебсайт</title>
+    <link rel="stylesheet" href="css/index.css">
 </head>
 
 <body>
@@ -27,28 +28,28 @@
         <h2><b>Різновиди устілок</b></h2>
         <br>
         <figure>
-            <img src="images/beige.png" width="60" height="30" alt="бежева устілка" />
+            <img src="images/beige.png" width="80" height="130" alt="бежева устілка" />
             <figcaption>Устілка бежева</figcaption>
         </figure>
         <figure>
-            <img src="images/blue.png" width="60" height="30" alt="блакитна устілка" />
+            <img src="images/blue.png" width="80" height="130" alt="блакитна устілка" />
             <figcaption>Устілка блакитна</figcaption>
         </figure>
         <figure>
-            <img src="images/green.png" width="60" height="30" alt="зелена устілка" />
+            <img src="images/green.png" width="80" height="130" alt="зелена устілка" />
             <figcaption>Устілка зелена</figcaption>
         </figure>
         <br>
         <figure>
-            <img src="images/green_golf_pro.png" width="60" height="30" alt="зелена устілка гольф про" />
+            <img src="images/green_golf_pro.png" width="80" height="130" alt="зелена устілка гольф про" />
             <figcaption>Устілка Зелена Гольф Про</figcaption>
         </figure>
         <figure>
-            <img src="images/pink.png" width="60" height="30" alt="рожева устілка" />
+            <img src="images/pink.png" width="80" height="130" alt="рожева устілка" />
             <figcaption>Устілка рожева</figcaption>
         </figure>
         <figure>
-            <img src="images/sandy_black.png" width="60" height="30" alt="пісочно-чорна устілка" />
+            <img src="images/sandy_black.png" width="80" height="130" alt="пісочно-чорна устілка" />
             <figcaption>Устілка пісочно-чорна</figcaption>
         </figure>
     </section>
@@ -107,8 +108,8 @@
     <br>
     <section>
         <h2><b>Ми у соцмережах</b></h2>
-        <a href="https://www.facebook.com/Formthotics.Ukraine/"><img src="images/facebookicon.png" width="30" height="30" alt="facebook"></a>
-        <a href="https://instagram.com/maximus.rehabilitation.lviv?utm_source=ig_profile_share&igshid=iqs6om64e1eq/"><img src="images/instagramicon.png" width="30" height="30" alt="instagram"></a>
+        <a href="https://www.facebook.com/Formthotics.Ukraine/"><img src="images/facebookicon.png" width="80" height="80" alt="facebook"></a>
+        <a href="https://instagram.com/maximus.rehabilitation.lviv?utm_source=ig_profile_share&igshid=iqs6om64e1eq/"><img src="images/instagramicon.png" width="80" height="80" alt="instagram"></a>
     </section>
 </body>
 
