Description of the work done

--- a/index.html
+++ b/index.html
@@ -26,33 +26,23 @@
     <p><b>Наша місія:</b> пропаганда нової філософії корекції стопи і тіла, а також впровадження унікальної методики оцінки опорно-рухового апарату і відновлення його функцій за допомогою індивідуальних ортезів ФормТотікс</p>
     <section>
         <h2><b>Різновиди устілок</b></h2>
+        <p>
         <br>
-        <figure>
-            <img src="images/beige.png" width="80" height="130" alt="бежева устілка" />
-            <figcaption>Устілка бежева</figcaption>
-        </figure>
-        <figure>
-            <img src="images/blue.png" width="80" height="130" alt="блакитна устілка" />
-            <figcaption>Устілка блакитна</figcaption>
-        </figure>
-        <figure>
-            <img src="images/green.png" width="80" height="130" alt="зелена устілка" />
-            <figcaption>Устілка зелена</figcaption>
-        </figure>
+            <img src="images/beige.png" align="bottom" width="130" height="210" alt="бежева устілка" />
+            <p>Устілка бежева</p>
+            <img src="images/blue.png" align="bottom" width="130" height="210" alt="блакитна устілка" />
+            <p>Устілка блакитна</p>
+            <img src="images/green.png" align="bottom" width="130" height="210" alt="зелена устілка" />
+            <p>Устілка зелена</p>
         <br>
-        <figure>
-            <img src="images/green_golf_pro.png" width="80" height="130" alt="зелена устілка гольф про" />
-            <figcaption>Устілка Зелена Гольф Про</figcaption>
-        </figure>
-        <figure>
-            <img src="images/pink.png" width="80" height="130" alt="рожева устілка" />
-            <figcaption>Устілка рожева</figcaption>
-        </figure>
-        <figure>
-            <img src="images/sandy_black.png" width="80" height="130" alt="пісочно-чорна устілка" />
-            <figcaption>Устілка пісочно-чорна</figcaption>
-        </figure>
+            <img src="images/green_golf_pro.png" align="bottom" width="130" height="210" alt="зелена устілка гольф про" />
+            <p>Устілка зелена Гольф Про</p>
+            <img src="images/pink.png" align="bottom" width="130" height="210" alt="рожева устілка" />
+            <p>Устілка рожева</p>
+            <img src="images/sandy_black.png" align="bottom" width="130" height="210" alt="пісочно-чорна устілка"/>
+            <p>Устілка пісочно-чорна</p>
     </section>
+    </p>
     <br>
     <section>
         <h2><b>Основні етапи методу корекції по системі ФормТотікс</b></h2>
@@ -108,8 +98,10 @@
     <br>
     <section>
         <h2><b>Ми у соцмережах</b></h2>
-        <a href="https://www.facebook.com/Formthotics.Ukraine/"><img src="images/facebookicon.png" width="80" height="80" alt="facebook"></a>
-        <a href="https://instagram.com/maximus.rehabilitation.lviv?utm_source=ig_profile_share&igshid=iqs6om64e1eq/"><img src="images/instagramicon.png" width="80" height="80" alt="instagram"></a>
+        <p>
+            <a href="https://www.facebook.com/Formthotics.Ukraine/"><img src="images/facebookicon.png" width="50" height="50" alt="facebook"></a>
+            <a href="https://instagram.com/maximus.rehabilitation.lviv?utm_source=ig_profile_share&igshid=iqs6om64e1eq/"><img src="images/instagramicon.png" width="50" height="50" alt="instagram"></a>
+        </p>
     </section>
 </body>
 
