Description of the work done

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
         <figure>
             <img src="images/sandy_black.png" width="130" height="210" alt="пісочно-чорна устілка" />
             <figcaption>Устілка пісочно-чорна</figcaption>
+        </figure>
     </section>
     <br>
     <section>
